Revert reading the Go build tags in the VSCode settings
Not having the Go build tags in settings.json breaks the language server
in VSCode. And unfortunately variable substitution is not available in
settings.json. This is sad.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,8 +22,7 @@
 				"golang.Go",
 				"ms-python.python",
 				"pbkit.vscode-pbkit",
-				"redhat.vscode-yaml",
-				"rioj7.command-variable"
+				"redhat.vscode-yaml"
 			]
 		}
 	},
