--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}",
-            "buildFlags": "-tags '${input:goBuildTags}'",
+            "buildFlags": "-tags '${config:go.buildTags}'",
             "args": [
                 "server",
                 "--database-uri",
@@ -23,7 +23,7 @@
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}",
-            "buildFlags": "-tags '${input:goBuildTags}'",
+            "buildFlags": "-tags '${config:go.buildTags}'",
             "args": [
                 "server",
                 "--database-uri",
@@ -36,7 +36,7 @@
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}",
-            "buildFlags": "-tags '${input:goBuildTags}'",
+            "buildFlags": "-tags '${config:go.buildTags}'",
             "args": [
                 "server",
                 "--database-uri",
@@ -49,22 +49,12 @@
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}",
-            "buildFlags": "-tags '${input:goBuildTags}'",
+            "buildFlags": "-tags '${config:go.buildTags}'",
             "args": [
                 "server",
                 "--database-uri",
                 "sqlite://encrypted.db?_key=passphrase"
             ],
-        }
-    ],
-    "inputs": [
-        {
-            "id": "goBuildTags",
-            "type": "command",
-            "command": "extension.commandvariable.file.content",
-            "args": {
-                "fileName": "${workspaceFolder}/.go-build-tags",
-            }
         }
     ]
 }
