--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Read build tags
         id: tags
-        run: echo tags=$(jq -r '."go.buildTags"' .vscode/settings.json) >> $GITHUB_OUTPUT
+        run: echo tags=$(cat .go-build-tags) >> $GITHUB_OUTPUT
 
       - name: Download formatters
         run: |
@@ -138,6 +138,58 @@ jobs:
       - name: Run ${{ matrix.api }} integration tests
         run: ./tests/integration/python/${{ matrix.api }}/test.sh
 
+  golang-build:
+    if: github.event_name == 'schedule' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
+    name: Build Go binary for ${{ matrix.os }}/${{ matrix.arch }}
+    strategy:
+      matrix:
+        os: [darwin, linux, windows]
+        arch: [amd64, arm64]
+        exclude:
+          - os: windows
+            arch: arm64
+        include:
+          - os: darwin
+            runner: macos-latest
+          - os: linux
+            runner: ubuntu-latest
+          - os: windows
+            runner: ubuntu-latest
+      fail-fast: true
+    runs-on: ${{ matrix.runner }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Install arm64 cross-compilation toolchain on Linux
+        if: matrix.os == 'linux' && matrix.arch == 'arm64'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends gcc-aarch64-linux-gnu libc6-dev-arm64-cross
+          echo CC=aarch64-linux-gnu-gcc >> $GITHUB_ENV
+
+      - name: Install Windows cross-compilation toolchain on Linux
+        if: matrix.os == 'windows'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends gcc-mingw-w64-x86-64-win32
+          echo CC=x86_64-w64-mingw32-gcc >> $GITHUB_ENV
+
+      - name: Build and archive Go binary
+        run: make go-dist
+        env:
+          GOOS: ${{ matrix.os }}
+          GOARCH: ${{ matrix.arch }}
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: fasttrackml-archives
+          path: dist/*
+
   build-image:
     if: github.event_name == 'schedule' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
     name: Build container image
@@ -152,8 +204,7 @@ jobs:
       - name: Compute build args
         id: build-args
         run: |
-          echo tags=$(jq -r '."go.buildTags"' .vscode/settings.json) >> $GITHUB_OUTPUT
-          echo version=$(git describe --tags | sed 's/^v//') >> $GITHUB_OUTPUT
+          echo version=$(git describe --tags --always --match='v*' | sed 's/^v//') >> $GITHUB_OUTPUT
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -177,7 +228,6 @@ jobs:
         with:
           context: .
           build-args: |
-            tags=${{ steps.build-args.outputs.tags }}
             version=${{ steps.build-args.outputs.version }}
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
@@ -202,6 +252,7 @@ jobs:
       - golang-unit-tests
       - golang-integration-tests
       - python-integration-tests
+      - golang-build
       - build-image
     runs-on: ubuntu-latest
     steps:
