--- a/.github/workflows/buildwheels.yml
+++ b/.github/workflows/buildwheels.yml
@@ -29,6 +29,7 @@ jobs:
         CIBW_ARCHS_MACOS: arm64, x86_64
         CIBW_ARCHS_LINUX: auto64
         CIBW_SKIP: pp*
+        CIBW_BUILD_VERBOSITY: 1
     - name: Build source distribution
       if: runner.os == 'Linux' # Only release source under linux to avoid conflict
       run: |
