--- a/.github/workflows/buildwheels.yml
+++ b/.github/workflows/buildwheels.yml
@@ -36,4 +36,21 @@ jobs:
         python3 -m pip install wheel
         python3 setup.py sdist
         mv dist/*.tar.gz wheelhouse/
+  github-release:
+    name: Publish GitHub release
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Download artifact
+        run: gh run download ${{ github.event.workflow_run.id }} --repo ${{ github.event.workflow_run.repository.full_name }} --name fasttrackml-archives --dir dist
+        env:
+          GH_TOKEN: ${{ github.token }}
+
+      - name: Create release
+        uses: softprops/action-gh-release@v1
+        with:
+          generate_release_notes: true
+          files: wheelhouse/*
+          tag_name: ${{ github.event.workflow_run.head_branch }}
  
