--- a/.github/workflows/buildwheels.yml
+++ b/.github/workflows/buildwheels.yml
@@ -36,10 +36,7 @@ jobs:
         python3 -m pip install wheel
         python3 setup.py sdist
         mv dist/*.tar.gz wheelhouse/
-    - name: Create release
-      uses: softprops/action-gh-release@v1
+    - uses: actions/upload-artifact@v3
       with:
-        generate_release_notes: true
-        files: wheelhouse/*
-        tag_name: ${{ github.event.workflow_run.head_branch }}
+        path: ./wheelhouse/*.whl
  
