--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -183,6 +183,33 @@ jobs:
         env:
           GOOS: ${{ matrix.os }}
           GOARCH: ${{ matrix.arch }}
+      - name: Configure linux build environment
+        if: runner.os == 'Linux'
+        run: |
+          mkdir -p bin
+          mv dist/fasttrackml_linux_arm64/fml bin/fml
+          chmod +x bin/fml
+      - name: Configure macOS build environment
+        if: runner.os == 'macOS'
+        run: |
+          mkdir -p bin
+          mv dist/fasttrackml_macos_arm64/fml bin/fml
+          chmod +x bin/fml
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.14.1
+        env:
+          CIBW_ARCHS_MACOS: arm64, x86_64
+          CIBW_ARCHS_LINUX: auto64
+          CIBW_SKIP: pp*
+      - name: Build source distribution
+        if: runner.os == 'Linux' # Only release source under linux to avoid conflict
+        run: |
+          python3 -m pip install wheel
+          python3 setup.py sdist
+          mv dist/*.tar.gz wheelhouse/
+      - uses: actions/upload-artifact@v3
+        with:
+          path: ./wheelhouse/*.whl
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
