--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -190,6 +190,65 @@ jobs:
           name: fasttrackml-archives
           path: dist/*
 
+  build-wheels:
+    needs: golang-build
+    runs-on: ${{ matrix.runner }}
+    timeout-minutes: 20
+    strategy:
+       matrix:
+        os: [darwin, linux, windows]
+        arch: [x86_64, arm64]
+        exclude:
+          - os: windows
+            arch: arm64
+        include:
+          - os: darwin
+            runner: macos-latest
+          - os: linux
+            runner: ubuntu-latest
+          - os: windows
+            runner: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Get binaries
+        uses: actions/download-artifact@v3
+        with:
+          name: fasttrackml-archives
+          path: dist/
+
+      - name: Configure linux build environment
+        if: matrix.os == 'linux'
+        run: |
+          mkdir -p bin
+          tar -xf dist/fasttrackml_linux_${{ matrix.arch }}.tar.gz
+          mv fml bin/fml
+          chmod +x bin/fml
+      - name: Configure macOS build environment
+        if: matrix.os == 'darwin'
+        run: |
+          mkdir -p bin
+          tar -xf dist/fasttrackml_macos_${{ matrix.arch }}.tar.gz
+          mv fml bin/fml
+          chmod +x bin/fml
+      - name: Configure windows build environment
+        if: matrix.os == 'windows'
+        run: |
+          mkdir bin
+          unzip dist/fasttrackml_windows_${{ matrix.arch }}.zip -d bin
+    
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.14.1
+        env:
+          CIBW_ARCHS_MACOS: arm64, x86_64
+          CIBW_ARCHS_LINUX: auto64
+          CIBW_ARCHS_WINDOWS: AMD64
+          CIBW_SKIP: pp*
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: fasttrackml-wheels
+          path: ./wheelhouse/*.whl
+          
   build-image:
     if: github.event_name == 'schedule' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
     name: Build container image
