--- a/.golangci.yml
+++ b/.golangci.yml
@@ -64,6 +64,9 @@ linters-settings:
     # minimal code complexity to report, 30 by default (but we recommend 10-20)
     min-complexity: 20
 
+  goimports:
+    local-prefixes: github.com/G-Research/fasttrackml
+
   govet:
     # report about shadowed variables
     check-shadowing: true
@@ -108,6 +111,8 @@ linters:
   enable:
     - goconst
     - gocyclo
+    - gofumpt
+    - goimports
     - gosec
     - gosimple
     - govet
