--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -9,9 +9,7 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 POSTGRES_HOSTNAME=localhost
 
-# aws client settings.
-AWS_ACCESS_KEY_ID: "user"
-AWS_SECRET_ACCESS_KEY: "password"
-
 # s3 compatible storage settings.
+AWS_ACCESS_KEY_ID=user
+AWS_SECRET_ACCESS_KEY=password
 FML_S3_ENDPOINT_URI=http://localhost:9000
