Add basic artifact support - S3 backend (#150)
* [FML-18] - finish task implementation.

* [FML-18] - minor changes after merge.

* [FML-18] - fix unit tests.

* [FML-18] - add more unit tests. adjust integration tests.

* [FML-18] - a bit simplify integration tests.

* [FML-18] - re order imports.

* [FML-18] - in case of unimplemented storage just return Nope storage.

* [FML-18] - switch from `localstack` to minio.

* [FML-18] - PR remarks.

* [FML-18] - merge main. resolve conflicts.

* [FML-18] - PR remarks.

* [FML-18] - PR remarks.

* [FML-18] - PR remarks.

* [FML-18] - PR remarks.

* [FML-18] - PR remarks.

* [FML-18] - use `postStartCommand` to init default `bucket` in minio.

* [FML-18] - minor adjustments.

* [FML-18] - PR remarks.

* [FML-18] - make it possible to put artifacts into different buckets.

* [FML-18] - fix pipline.

* [FML-18] - do not modify `ArtifactLocation` in `validators` layer.

* [FML-18] - process `ArtifactLocation` based on provided schama.

* [FML-18] - fix build pipeline.

* [FML-18] - minor adjustments.

* [FML-18] - fix integration tests.

* [FML-18] - minor changes.

* [FML-18] - PR remarks.

* [FML-18] - PR remarks.

* [FML-18] - fix build pipeline.

* [FML-18] - use regexp instead of `strings.Contains`. adjust unit tests.

* [FML-18] - fix build pipeline.

* [FML-18] - in progress with PR remarks.

* [FML-18] - in progress with PR remarks.

* [FML-18] - address PR remarks. fix build pipeline.

* [FML-18] - address PR remarks.

* [FML-18] - fix unit and integration tests.

* [FML-18] - PR remarks.

* [FML-18] - address PR remarks.

* [FML-18] - merge main.

* [FML-18] - add more unit tests.

* [FML-18] - add more unit tests.

* [FML-18] - fix unit tests.

* [FML-18] - a bit change validation logic.

* [FML-18] - remove regexp. simplify validation.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,8 +28,9 @@
 	},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [
-		5000,
-		5432
+		5432,
+		9000,
+		9001
 	],
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "go version",
@@ -41,6 +42,8 @@
 		},
 		"ghcr.io/devcontainers/features/git:1": {},
 		"ghcr.io/devcontainers/features/github-cli:1": {},
-		"ghcr.io/dhoeric/features/k6:1": {}
-	}
+		"ghcr.io/dhoeric/features/k6:1": {},
+		"ghcr.io/christophermacgown/devcontainer-features/minio-client:1": {}
+	},
+	"postStartCommand": "mc alias set local http://localhost:9000 $AWS_ACCESS_KEY_ID $AWS_SECRET_ACCESS_KEY && mc mb -p local/fasttrackml"
 }
