--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -1,7 +1,15 @@
+# common service settings.
+FML_DEV_MODE=true
+FML_LOG_LEVEL=DEBUG
+
+# database settings.
+LC_COLLATE=POSIX
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 POSTGRES_HOSTNAME=localhost
-LC_COLLATE=POSIX
-FML_LOG_LEVEL=DEBUG
-FML_DEV_MODE=true
+
+# s3 compatible storage settings.
+AWS_ACCESS_KEY_ID=user
+AWS_SECRET_ACCESS_KEY=password
+FML_S3_ENDPOINT_URI=http://localhost:9000
