--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 volumes:
   home:
   workspaces:
+  minio-data:
   postgres-data:
 
 services:
@@ -58,8 +59,21 @@ services:
       # - -c
       # - log_statement=all
     ports:
-      - 5000:5000
+      - "5432:5432"
+      - "9000:9000"
+      - "9001:9001"
 
     # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.). Ports
     # section will work when running the compose file standalone.
+
+  minio:
+    image: minio/minio
+    volumes:
+      - minio-data:/data
+    environment:
+      MINIO_ROOT_USER: user
+      MINIO_ROOT_PASSWORD: password
+      MINIO_CONSOLE_ADDRESS: ":9001"
+    command: server /data
+    network_mode: service:db
