--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,28 @@ services:
     build:
       context: .
     depends_on:
+      - minio
       - postgres
     environment:
-      FML_DATABASE_URI: postgres://postgres:postgres@postgres/postgres
       FML_LOG_LEVEL: debug
+      FML_DATABASE_URI: postgres://postgres:postgres@postgres/postgres
+      FML_S3_ENDPOINT_URI: http://minio:9000
+      AWS_ACCESS_KEY_ID: "user"
+      AWS_SECRET_ACCESS_KEY: "password"
 
   postgres:
     image: postgres:latest
     environment:
       - POSTGRES_PASSWORD=postgres
+
+  minio:
+    image: minio/minio:latest
+    entrypoint: sh
+    command: -c 'mkdir -p /data/{bucket1,bucket2,bucket3} && minio server /data'
+    environment:
+      MINIO_ROOT_USER: "user"
+      MINIO_ROOT_PASSWORD: "password"
+      MINIO_CONSOLE_ADDRESS: ":9001"
 
   integration-tests:
     image: golang:1.20
@@ -21,11 +34,15 @@ services:
       - go-cache:/go/pkg
     working_dir: /go/src
     depends_on:
-      - service
+      - minio
       - postgres
+      - service
     environment:
-      FML_DATABASE_URI: postgres://postgres:postgres@postgres/postgres
       FML_SERVICE_URI: http://service:5000
+      FML_DATABASE_URI: postgres://postgres:postgres@postgres/postgres
+      FML_S3_ENDPOINT_URI: http://minio:9000
+      AWS_ACCESS_KEY_ID: "user"
+      AWS_SECRET_ACCESS_KEY: "password"
 
 volumes:
   go-cache:
