--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -247,6 +247,7 @@ jobs:
   # Virtual job that can be configured as a required check before a PR can be merged.
   all-required-checks-done:
     name: All required checks done
+    if: ${{ always() }}
     needs:
       - lint
       - golang-unit-tests
@@ -256,7 +257,13 @@ jobs:
       - build-image
     runs-on: ubuntu-latest
     steps:
-      - run: echo "All required checks done"
+      - run: |
+          if [ "${{ contains(needs.*.result, 'success') }}" == "true" ]; then
+            echo "All required checks successful"
+          else
+            echo "::error ::Some required checks failed"
+            exit 1
+          fi
 
   # Publish any push to a branch or tag to ghcr.io as a convenience
   # Actual release to Docker Hub happens in a different workflow
