--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,232 +17,14 @@ jobs:
     name: Lint
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Setup Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: "1.20"
-
-      - name: Read build tags
-        id: tags
-        run: echo tags=$(cat .go-build-tags) >> $GITHUB_OUTPUT
-
-      - name: Download formatters
-        run: |
-          go install golang.org/x/tools/cmd/goimports@v0.11.0
-          go install mvdan.cc/gofumpt@v0.5.0
-
-      - name: Check formatting
-        run: |
-          unformatted=$(
-            gofumpt -l .
-            goimports -l --local github.com/G-Research/fasttrackml .
-          )
-          if [ -n "$unformatted" ]; then
-            for file in $unformatted; do
-              echo "::error file=$file::$file is not formatted properly (hint: run \"make go-format\" to fix this)"
-            done
-            exit 1
-          fi
-
-      - name: Download mockery
-        run: go install github.com/vektra/mockery/v2@v2.30.16
-
-      - name: Generate mocks
-        run: make mocks-generate
-
-      - name: Check with go vet
-        run: go vet --tags "${{ steps.tags.outputs.tags }}" ./...
-
-      - uses: dominikh/staticcheck-action@v1.3.0
-        with:
-          version: "2022.1.3"
-          build-tags: ${{ steps.tags.outputs.tags }}
+      - run: exit 1
 
   golang-unit-tests:
     if: github.event_name == 'schedule' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
     name: Golang Unit Tests
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Setup Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: "1.20"
-
-      - name: Download mockery
-        run: go install github.com/vektra/mockery/v2@v2.30.16
-
-      - name: Generate mocks
-        run: make mocks-generate
-
-      - name: Run Golang Unit Tests
-        run: make test-go-unit
-
-  golang-integration-tests:
-    if: github.event_name == 'schedule' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
-    name: Golang Integration Tests
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Setup Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: "1.20"
-
-      - name: Run Integration Tests
-        run: make service-test
-        env:
-          DOCKER_BUILDKIT: 1
-
-  python-integration-tests:
-    if: github.event_name == 'schedule' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
-    name: Python Integration Tests
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        api: [aim, mlflow]
-      fail-fast: false
-    services:
-      postgres:
-        image: postgres
-        env:
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: test
-          LC_COLLATE: POSIX
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Setup Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: "1.20"
-
-      - name: Run ${{ matrix.api }} integration tests
-        run: ./tests/integration/python/${{ matrix.api }}/test.sh
-
-  golang-build:
-    if: github.event_name == 'schedule' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
-    name: Build Go binary for ${{ matrix.os }}/${{ matrix.arch }}
-    strategy:
-      matrix:
-        os: [darwin, linux, windows]
-        arch: [amd64, arm64]
-        exclude:
-          - os: windows
-            arch: arm64
-        include:
-          - os: darwin
-            runner: macos-latest
-          - os: linux
-            runner: ubuntu-latest
-          - os: windows
-            runner: ubuntu-latest
-      fail-fast: true
-    runs-on: ${{ matrix.runner }}
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Install arm64 cross-compilation toolchain on Linux
-        if: matrix.os == 'linux' && matrix.arch == 'arm64'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y --no-install-recommends gcc-aarch64-linux-gnu libc6-dev-arm64-cross
-          echo CC=aarch64-linux-gnu-gcc >> $GITHUB_ENV
-
-      - name: Install Windows cross-compilation toolchain on Linux
-        if: matrix.os == 'windows'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y --no-install-recommends gcc-mingw-w64-x86-64-win32
-          echo CC=x86_64-w64-mingw32-gcc >> $GITHUB_ENV
-
-      - name: Build and archive Go binary
-        run: make go-dist
-        env:
-          GOOS: ${{ matrix.os }}
-          GOARCH: ${{ matrix.arch }}
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: fasttrackml-archives
-          path: dist/*
-
-  build-image:
-    if: github.event_name == 'schedule' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
-    name: Build container image
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Compute build args
-        id: build-args
-        run: |
-          echo version=$(git describe --tags --always --match='v*' | sed 's/^v//') >> $GITHUB_OUTPUT
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: fasttrackml
-          tags: |
-            type=ref,event=branch
-            type=ref,event=tag
-            type=ref,event=pr
-            type=edge
-
-      - name: Build container image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          build-args: |
-            version=${{ steps.build-args.outputs.version }}
-          platforms: linux/amd64,linux/arm64
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          provenance: false
-          sbom: false
-          outputs: type=oci,dest=fasttrackml-oci.tar
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: fasttrackml-oci-image
-          path: fasttrackml-oci.tar
+      - run: exit 0
 
   # Virtual job that can be configured as a required check before a PR can be merged.
   all-required-checks-done:
@@ -251,52 +33,7 @@ jobs:
     needs:
       - lint
       - golang-unit-tests
-      - golang-integration-tests
-      - python-integration-tests
-      - golang-build
-      - build-image
     runs-on: ubuntu-latest
     steps:
       - run: |
-          if [ "${{ contains(needs.*.result, 'success') }}" == "true" ]; then
-            echo "All required checks successful"
-          else
-            echo "::error ::Some required checks failed"
-            exit 1
-          fi
-
-  # Publish any push to a branch or tag to ghcr.io as a convenience
-  # Actual release to Docker Hub happens in a different workflow
-  push-ghcr:
-    name: Push to GitHub Container Registry
-    if: github.event_name == 'push'
-    runs-on: ubuntu-latest
-    needs: all-required-checks-done
-    permissions:
-      packages: write
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: fasttrackml-oci-image
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Compute repo name
-        id: repo
-        run: echo name=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_OUTPUT
-
-      - name: Push to GitHub Container Registry
-        run: |
-          tags=$(tar -xOf fasttrackml-oci.tar index.json | jq -r '.manifests[].annotations."org.opencontainers.image.ref.name"')
-          for tag in $tags
-          do
-            echo "::group::Pushing image to ghcr.io/${{ steps.repo.outputs.name }}:$tag"
-            skopeo copy --all oci-archive:fasttrackml-oci.tar:$tag docker://ghcr.io/${{ steps.repo.outputs.name }}:$tag
-            echo "::endgroup::"
-          done
+          echo ${{ needs.*.result }}
