--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,6 @@ jobs:
           ) == "true" ]; then
             echo "All required checks succeeded"
           else
-            echo "Some required checks failed"
+            echo ::error ::"Some required checks failed"
             exit 1
           fi
