Upgrade Go from 1.20 to 1.21
- Upgrade devcontainer to Debian bookworm
- Upgrade mockery from 2.30.16 to 2.32.4
- Upgrade golangci-lint from 1.53.3 to 1.54.1
- Use context directly in unit tests as mocking depends on Go internals that changed in Go 1.21

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,20 +1,26 @@
-# [Choice] Go version (use -bullseye variants on local arm64/Apple Silicon): 1, 1.18, 1.17, 1-bullseye, 1.18-bullseye, 1.17-bullseye, 1-buster, 1.18-buster, 1.17-buster
-ARG VARIANT=1-bullseye
-FROM mcr.microsoft.com/devcontainers/go:0-${VARIANT}
-
-# [Choice] Node.js version: none, lts/*, 16, 14, 12, 10
-ARG NODE_VERSION="none"
-RUN if [ "${NODE_VERSION}" != "none" ]; then su vscode -c "umask 0002 && . /usr/local/share/nvm/nvm.sh && nvm install ${NODE_VERSION} 2>&1"; fi
+# [Choice] Go version (use -bookworm, or -bullseye variants on local arm64/Apple Silicon): 1, 1.21, 1.20, 1-bookworm, 1.21-bookworm, 1.20-bookworm, 1-bullseye, 1.21-bullseye, 1.20-bullseye
+ARG VARIANT=1-bookworm
+FROM mcr.microsoft.com/devcontainers/go:1-${VARIANT}
 
 # [Optional] Uncomment this section to install additional OS packages.
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends libssl-dev postgresql-client python-is-python3 python3-pip python3-dev python3-venv sqlite3 emacs-nox ripgrep fzf \
-    && pip install pipenv
+RUN apt-get update \
+ && DEBIAN_FRONTEND=noninteractive apt-get -y install --no-install-recommends \
+    emacs-nox \
+    fzf \
+    libssl-dev \
+    pipenv \
+    postgresql-client \
+    python-is-python3 \
+    python3-dev \
+    python3-pip \
+    python3-venv \
+    ripgrep \
+    sqlite3
 
 # [Optional] Uncomment the next lines to use go get to install anything else you need
 USER vscode
-RUN go install github.com/vektra/mockery/v2@v2.30.16 \
- && go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.53.3 \
+RUN go install github.com/vektra/mockery/v2@v2.32.4 \
+ && go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.54.1 \
  && go install golang.org/x/tools/cmd/goimports@v0.11.0 \
  && go install mvdan.cc/gofumpt@v0.5.0
 USER root
@@ -24,3 +30,7 @@ USER root
 
 # Install xh
 RUN curl -sfL https://raw.githubusercontent.com/ducaale/xh/master/install.sh | XH_BINDIR=/usr/local/bin sh
+
+# Add docker-compose symlink to Docker Compose v2
+# This is a workaround until https://github.com/devcontainers/features/pull/621 lands
+RUN ln -s /usr/libexec/docker/cli-plugins/docker-compose /usr/local/bin/
