--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,16 +43,18 @@ jobs:
             const results = ${{ toJSON(needs.*.result) }};
             if (results.every(res => res === 'success')) {
               core.info('All required checks succeeded');
-              github.checks.create({
+              octokit.request('POST /repos/{owner}/{repo}/check-runs', {
+                owner: context.repo.owner,
+                repo: context.repo.repo,
                 name: 'All required checks done - required for PR merge',
-                head_sha: github.context.sha,
+                head_sha: context.sha,
                 status: 'completed',
                 conclusion: 'success',
                 output: {
                   title: 'All required checks done',
                   summary: 'All required checks succeeded',
                 },
-              });
+              }');
             } else {
               core.setFailed('Some required checks failed');
             }
