--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
             const results = ${{ toJSON(needs.*.result) }};
             if (results.every(res => res === 'success')) {
               core.info('All required checks succeeded');
-              octokit.request('POST /repos/{owner}/{repo}/check-runs', {
+              github.rest.checks.create({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 name: 'All required checks done - required for PR merge',
@@ -52,8 +52,8 @@ jobs:
                 conclusion: 'success',
                 output: {
                   title: 'All required checks done',
-                  summary: 'All required checks succeeded',
-                },
+                  summary: 'All required checks succeeded'
+                }
               });
             } else {
               core.setFailed('Some required checks failed');
