--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,7 +64,8 @@ jobs:
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          packages-dir: wheelshouse/
+          packages-dir: wheelhouse/
+    
   github-release:
     name: Publish GitHub release
     needs: validate
