Python formatting and linting
- Add pipenv basic environment with mlflow, black, and isort
- Install black and isort VS Code extensions
- Setup VS Code for automatic Python formatting
- Add Makefile targets for formatting and linting
- Add Python linting to CI

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,9 @@
 				"golang.Go",
 				"ms-python.python",
 				"pbkit.vscode-pbkit",
-				"redhat.vscode-yaml"
+				"redhat.vscode-yaml",
+				"ms-python.black-formatter",
+				"ms-python.isort"
 			]
 		}
 	},
