--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,9 @@ permissions:
   contents: read
 
 jobs:
-  lint:
+  go-lint:
     if: github.event_name == 'schedule' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
-    name: Lint
+    name: Go Lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -61,9 +61,28 @@ jobs:
           version: "2022.1.3"
           build-tags: ${{ steps.tags.outputs.tags }}
 
-  golang-unit-tests:
+  python-lint:
     if: github.event_name == 'schedule' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
-    name: Golang Unit Tests
+    name: Python Lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+
+      - name: Install pipenv
+        run: pip install pipenv==2022.12.19
+
+      - name: Run Python linters
+        run: make python-lint
+
+  go-unit-tests:
+    if: github.event_name == 'schedule' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
+    name: Go Unit Tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -80,12 +99,12 @@ jobs:
       - name: Generate mocks
         run: make mocks-generate
 
-      - name: Run Golang Unit Tests
+      - name: Run Go Unit Tests
         run: make test-go-unit
 
-  golang-integration-tests:
+  go-integration-tests:
     if: github.event_name == 'schedule' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
-    name: Golang Integration Tests
+    name: Go Integration Tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -266,9 +285,10 @@ jobs:
   all-required-checks-done:
     name: All required checks done
     needs:
-      - lint
-      - golang-unit-tests
-      - golang-integration-tests
+      - go-lint
+      - python-lint
+      - go-unit-tests
+      - go-integration-tests
       - python-integration-tests
       - build
       - build-image
