--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,19 @@
     "go.lintTool": "golangci-lint",
     "go.lintFlags": [
         "--fast"
+    ],
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter",
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": true
+        }
+    },
+    "black-formatter.args": [
+        "--line-length",
+        "120"
+    ],
+    "isort.args": [
+        "--profile",
+        "black"
     ]
 }
