--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ fasttrackml
 # Local database
 fasttrackml.db*
 encrypted.db*
+fasttrackml-in.*
+fasttrackml-out.*
 
 # Imported integration tests
 tests/integration/python/*/*.src
