--- a/docs/example/pyproject.toml
+++ b/docs/example/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["Sharpz7 <adam.mcarthur62@gmail.com>"]
 python = "^3.9"
 pandas = "^1.5.3"
 scikit-learn = "^1.2.1"
+mlflow-skinny = "^2.6.0"
+matplotlib = "^3.7.2"
 
 [tool.poetry.dev-dependencies]
 
