Update namespaces branch with latest changes from main (#383)
* Bump github.com/aws/aws-sdk-go-v2/config from 1.18.39 to 1.18.40 (#339)
* Improve logging of SQL queries/warnings/errors (#337)
* Add integration tests for Aim API SearchRuns endpoint (#317)
* Fix devcontainer and UI development guide (#341)
* Improve help and version output (#342)
* Fix typo in query parsing error (#343)
* Improve README (#345)
* Update website (#349)
* Announce version 0.3.1 on website (#351)
* Update Pipfile (#350)
* Add VS Code debug binary and Go workspace files to .gitignore (#365)
* Fix broken link to quickstart guide in README (#366)
* Change UI static files serving to be under `/static/<ui>/` (#364)
* Rename Step and Epoch labels in Aim UI (#369)
* Change `get-artifact` endpoint to `ajax-api/2.0/mlflow/artifacts/get` in MLFlow UI (#370)
* Support multiple artifact storage backends (#378)
* Fix website config linting issue (#379)
* Fix typo (#380)
* Improve setup for integration tests (#381)
* Make sure the results of integration tests are never cached (#382)
* Fix `ListArtifacts` to return correct paths (#367)
* Aim integration tests project (#280)
* Fix Postgres connection pool regression (#387)

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ dist/
 fml
 fasttrackml
 *.exe
+__debug_bin*
 
 # Local database
 fasttrackml.db*
@@ -27,7 +28,7 @@ mock_*
 .DS_Store
 
 # Optional workspace
-go.work
+go.work*
 *.code-workspace
 
 # Python wheels
