*in progress with linter remarks.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -45,6 +45,11 @@ output:
 
   # all available settings of specific linters
 linters-settings:
+  exhaustive:
+    # Presence of "default" case in switch statements satisfies exhaustiveness,
+    # even if all enum members are not listed.
+    # Default: false
+    default-signifies-exhaustive: true
   errcheck:
     # report about not checking of errors in type assetions: `a := b.(MyStruct)`;
     # default is false: such cases aren't reported by default.
