Automatically announce latest release on our website

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,11 +62,12 @@ jobs:
         run: gh run download ${{ github.event.workflow_run.id }} --repo ${{ github.event.workflow_run.repository.full_name }} --name fasttrackml-wheels --dir wheelhouse
         env:
           GH_TOKEN: ${{ github.token }}
+
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: wheelhouse/
-    
+
   github-release:
     name: Publish GitHub release
     needs: validate
@@ -86,6 +87,15 @@ jobs:
           generate_release_notes: true
           files: dist/*
           tag_name: ${{ github.event.workflow_run.head_branch }}
+
+  update-website:
+    name: Update website
+    needs: github-release
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    uses: ./.github/workflows/website.yml
 
   docker-release:
     name: Publish container image to DockerHub
