--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,7 +31,7 @@
             ],
         },
         {
-            "name": "Launch server (sqlite file)",
+            "name": "Launch server (sqlite file) - for integration tests",
             "type": "go",
             "request": "launch",
             "mode": "auto",
@@ -40,7 +40,7 @@
             "args": [
                 "server",
                 "--database-uri",
-                "sqlite://fasttrackml.db"
+                "sqlite:///tmp/fasttrackml.db"
             ],
         },
         {
